src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ALERT__c</fullName>
        <inlineHelpText>This field is used for alerting the user of a critical item for this client.  The user can bold the text using the editor; however, applying different fonts or colors is not yet available.</inlineHelpText>
        <label>ALERT</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AUM_Fee_Structure__c</fullName>
        <label>AUM Fee Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Plan A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Status__c</fullName>
        <inlineHelpText>Default value on new Entities is &quot;Active&quot;. This field requires a selection from the picklist values Active, Inactive or Terminated.</inlineHelpText>
        <label>Active Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_for_Mail_Merge__c</fullName>
        <label>Address for Mail Merge</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrator__c</fullName>
        <label>Administrator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <inlineHelpText>Enter a description of this entity (e.g. &quot;The Smiths are a conservative, self-made family.  They are active with their church etc...&quot;)</inlineHelpText>
        <label>Bio</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Meeting_Frequency__c</fullName>
        <inlineHelpText>How often do you meet with this client?</inlineHelpText>
        <label>Client Meeting Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Since__c</fullName>
        <inlineHelpText>The original date the client signed on.</inlineHelpText>
        <label>Client Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Svcs_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Svcs Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Entities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Method__c</fullName>
        <label>Collection Method</label>
        <picklist>
            <picklistValues>
                <fullName>Fee deduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay by Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comprehensive_Wealth_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comprehensive Wealth Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Date_Original__c</fullName>
        <inlineHelpText>Date of the first or original executed contract</inlineHelpText>
        <label>Contract Date (Original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <inlineHelpText>Date of the current executed contract</inlineHelpText>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporate_Email__c</fullName>
        <label>Corporate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Critical_Notes__c</fullName>
        <inlineHelpText>Enter any high impact information affecting the entity (e.g. &quot;Mr. Smith is scheduled for heart surgery on April 10, 2008&quot; or &quot;John, the principal attorney is exiting the firm on June 19, 2008&quot;)</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department_Status__c</fullName>
        <label>Department Status</label>
        <picklist>
            <picklistValues>
                <fullName>Business Planning Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial P&amp;C Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial P&amp;C Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Benefits Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Benefits Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Planning Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Planning Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Document_Folder__c</fullName>
        <formula>HYPERLINK(&quot;file://M:/XLR8_DMS/&quot; &amp; Name,&quot;Connect&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Folder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EB_Primary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Executive Benefits Primary Rep</inlineHelpText>
        <label>EB Primary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EB_Secondary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Executive Benefits Secondary Rep</inlineHelpText>
        <label>EB Secondary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_ID_18__c</fullName>
        <description>This is the 18-character record id of the Entity and should be used in reporting if filtering by Entity ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the 18-character record id of the Entity and should be used in reporting if filtering by Entity ID.</inlineHelpText>
        <label>Entity ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Risk_Score__c</fullName>
        <label>Entity Risk Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Sub_Type__c</fullName>
        <label>Entity Sub-Type</label>
        <picklist>
            <controllingField>Entity_Type__c</controllingField>
            <picklistValues>
                <fullName>Academic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier/Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends and Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Products &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrevocable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media/Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant/Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revocable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alternative Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrevocable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revocable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spendthrift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax By-Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Corporation (B-Corp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Corporation (C-Corp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Company (LLC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Partnership (LLP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Corporation (PC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional LLC (PLLC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Limited Company (PLC)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Envelope_Name__c</fullName>
        <inlineHelpText>Enter the name as it would appear on an envelope addressed to this entity.
Example: Mr. and Mrs. Robert Smith</inlineHelpText>
        <label>Envelope Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estate_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estate Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fourth_Address_Formatted__c</fullName>
        <formula>IF(Fourth_C_O__c &lt;&gt; NULL, Fourth_C_O__c &amp; BR(), &quot;&quot;) &amp; Fourth_Street__c &amp; BR() &amp; IF(Fourth_Street_2__c &lt;&gt; NULL, Fourth_Street_2__c &amp; BR(), &quot;&quot;) &amp; Fourth_City__c &amp; &quot;, &quot; &amp; Fourth_State__c &amp; &quot; &quot; &amp; Fourth_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fourth Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_C_O__c</fullName>
        <inlineHelpText>Add person or company in care of, if applicable.</inlineHelpText>
        <label>Fourth C/O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_City__c</fullName>
        <label>Fourth City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Country__c</fullName>
        <label>Fourth Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Mailing_Notes__c</fullName>
        <label>Fourth Mailing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_State__c</fullName>
        <label>Fourth State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Street_2__c</fullName>
        <label>Fourth Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Street__c</fullName>
        <label>Fourth Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Type__c</fullName>
        <label>Fourth Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fourth_Zip__c</fullName>
        <label>Fourth Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Closed_Date__c</fullName>
        <inlineHelpText>This is the date the fund was closed to new investors.</inlineHelpText>
        <label>Fund Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Co_Manager_Tenure__c</fullName>
        <inlineHelpText>The Co-Manager tenure date.</inlineHelpText>
        <label>Fund Co-Manager Tenure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Co_Manager__c</fullName>
        <label>Fund Co-Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Company__c</fullName>
        <label>Fund Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Manager_Tenure__c</fullName>
        <inlineHelpText>The Fund Manager tenure date.</inlineHelpText>
        <label>Fund Manager Tenure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Manager__c</fullName>
        <label>Fund Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Strategy__c</fullName>
        <label>Fund Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GB_Primary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Group Benefits Primary Rep</inlineHelpText>
        <label>GB Primary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GB_Secondary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Group Benefits Secondary Rep</inlineHelpText>
        <label>GB Secondary Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Group_ID_18__c</fullName>
        <description>This field represents the 18-character record id of the Hierarchy Group ID and is used in the Financial Accounts by Hierarchy Group report to ensure accurate reporting of records.  This was required due to case insensitivity in report filters on ID fields.</description>
        <formula>CASESAFEID(Hierarchy_Id_As_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the 18-character record id for the Hierarchy Group ID (top level Entity record in a Hierarchy Group) and and should be used in reporting if filtering by Hierachy Group ID.</inlineHelpText>
        <label>Hierarchy Group ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Group_ID__c</fullName>
        <formula>IF( 
ISBLANK(ParentId), 
Id , 
IF( 
ISBLANK(Parent.ParentId), 
Parent.Id, 
IF( 
ISBLANK(Parent.Parent.ParentId), 
Parent.Parent.Id, 
IF( 
ISBLANK(Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Id, 
IF( 
ISBLANK(Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Id, 
IF( 
ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Parent.Id, 
Parent.Parent.Parent.Parent.Parent.Parent.Id 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the 15-character record id of the top-level Entity record in a Hierarchy Group.</inlineHelpText>
        <label>Hierarchy Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Group_Name__c</fullName>
        <formula>IF( 
ISBLANK(ParentId), 
Name , 
IF( 
ISBLANK(Parent.ParentId), 
Parent.Name, 
IF( 
ISBLANK(Parent.Parent.ParentId), 
Parent.Parent.Name, 
IF( 
ISBLANK(Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Name, 
IF( 
ISBLANK(Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Name, 
IF( 
ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Parent.Name, 
Parent.Parent.Parent.Parent.Parent.Parent.Name 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Id_As_Text__c</fullName>
        <description>This field is used internally by a workflow rule to store the text of the Hierarchy Group Id.  It should  not be placed on page layouts.  It is later used by a workflow rule and converted into the Hierarchy Group ID 18 field.</description>
        <inlineHelpText>This field is used internally by a workflow rule to store the text of the Hierarchy Group Id.  It should  not be placed on page layouts.   It is later used by a workflow rule and converted into the Hierarchy Group ID 18 field.</inlineHelpText>
        <label>Hierarchy Id As Text</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Holiday_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holiday Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holiday_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holiday Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for migration purposes only. It can be hidden post migration, or if no migration will be performed.</inlineHelpText>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inception_Date__c</fullName>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Index_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Index Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Informal_Name__c</fullName>
        <inlineHelpText>Enter name as entity would be addressed in casual communication (i.e. nickname or go-by name).
Example: Bob and Mary</inlineHelpText>
        <label>Informal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Date__c</fullName>
        <label>Initial Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ins_Client_Svcs_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Insurance Client Services Administrator</inlineHelpText>
        <label>Ins Client Svcs Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountskd7M</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ins_Primary_Services_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Insurance Primary Servicing Rep</inlineHelpText>
        <label>Ins Primary Servicing Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ins_Registered_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Insurance Registered Rep</inlineHelpText>
        <label>Ins Registered Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Review_Month__c</fullName>
        <label>Insurance Review Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Investment_Availability__c</fullName>
        <label>Investment Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investment_Due_Diligence_Status__c</fullName>
        <label>Due Diligence Status</label>
        <picklist>
            <picklistValues>
                <fullName>In-Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investment_Fee_Structure__c</fullName>
        <label>Fee Structure</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Fund_Folder__c</fullName>
        <formula>HYPERLINK(&quot;file://M:/XLR8_DMS/&quot; &amp; Name,&quot;Connect&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investment Fund Folder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Geographic_Focus__c</fullName>
        <label>Geographic Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investment_Management_Fee__c</fullName>
        <label>Management Fee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investor_Qualification__c</fullName>
        <label>Investor Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>3(c)1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3(c)7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Accredited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Method__c</fullName>
        <label>Invoice Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoicing_Structure__c</fullName>
        <label>Invoicing Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Percent AUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent Net Worth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retainer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Man_Provision__c</fullName>
        <label>Key Man Provision</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_ADV_Received__c</fullName>
        <label>Last ADV Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_ADV_Sent__c</fullName>
        <label>Last ADV Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Estate_Plan_Review__c</fullName>
        <label>Last Estate Plan Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Financial_Plan_Review__c</fullName>
        <label>Last Financial Plan Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Financial_Statements__c</fullName>
        <label>Last Financial Statements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Fund_Review__c</fullName>
        <inlineHelpText>The last date the fund was reviewed.</inlineHelpText>
        <label>Last Fund Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Goals_Review__c</fullName>
        <label>Last Goals Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_IPS_Review__c</fullName>
        <label>Last IPS Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Insurance_Plan_Review__c</fullName>
        <label>Last Insurance Plan Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Issue_Questionnaire_Sent__c</fullName>
        <label>Last Issue Questionnaire Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Marketing_Received__c</fullName>
        <label>Last Marketing Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Portfolio_Review__c</fullName>
        <label>Last Portfolio Review</label>
        <type>Date</type>
    </fields>
</CustomObject>